# hypembed

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
agent-tools/: 35da1005-fb39-4b1c-a7b3-d17822d9a862.txt  f0200780-37ff-4053-b9f3-23dee7226f6b.txt
benches/: inference_bench.rs
examples/: basic_embed.rs  write_tiny_model.rs
examples/bunny-edge/: embed-handler.js  hypembed_wasm.d.ts  hypembed_wasm.js  hypembed_wasm_bg.wasm  hypembed_wasm_bg.wasm.d.ts
hype-rag/: Cargo.toml
hype-rag/src/: chunk.rs  error.rs  index.rs  lib.rs  main.rs  search.rs  store.rs  text_boundary.rs
hype-rag/tests/: integration_test.rs  write_fixture.rs
hypembed-wasm/: Cargo.toml
hypembed-wasm/src/: lib.rs
hypembed-wasm/tests/: embed_native.rs
scripts/: finalize_deliverable.cmd  generate_bunny_glue.cmd  generate_golden.py  verify_all.cmd  verify_cli.cmd  verify_cli.ps1  verify_wasm.cmd
src/: lib.rs
src/error/: mod.rs
src/model/: attention.rs  config.rs  embedding.rs  encoder.rs  ff.rs  mod.rs  pool.rs  safetensors.rs  weights.rs
src/pipeline/: embedder.rs  mod.rs
src/tensor/: activation.rs  layernorm.rs  matmul.rs  mod.rs  normalize.rs  ops.rs  shape.rs  simd.rs  softmax.rs
src/tokenizer/: encode.rs  mod.rs  pre_tokenize.rs  vocab.rs  wordpiece.rs
tests/: bunny_edge_test.rs  byte_load_test.rs  consumer_contract.rs  golden_test.rs  repo_scope_test.rs
tests/common/: mod.rs
