[package]
name = "hypembed"
version = "0.2.1"
edition = "2021"
rust-version = "1.70"
description = "Pure-Rust BERT-compatible text embedding inference for local-first applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/neuralforgeone/hypembed"
homepage = "https://neuralforgeone.github.io/hypembed/"
documentation = "https://neuralforgeone.github.io/hypembed/api/hypembed/"
readme = "README.md"
keywords = ["embeddings", "inference", "transformer", "nlp", "bert"]
categories = ["science", "text-processing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
memmap2 = "0.9"
rayon = "1.10"
unicode-normalization = "0.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "inference_bench"
harness = false
