[workspace]
members = [".", "hype-rag", "hypembed-wasm"]
resolver = "2"

[package]
name = "hypembed"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
description = "Pure-Rust BERT-compatible text embedding inference for local-first applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/neuralforgeone/hypembed"
homepage = "https://neuralforgeone.github.io/hypembed/"
documentation = "https://neuralforgeone.github.io/hypembed/api/hypembed/"
readme = "README.md"
keywords = ["embeddings", "inference", "transformer", "nlp", "bert"]
categories = ["science", "text-processing"]
exclude = ["/mcps/", "/agent-tools/", "/.github/", "/scripts/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-normalization = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "inference_bench"
harness = false

[[example]]
name = "write_tiny_model"
path = "examples/write_tiny_model.rs"