[package]
name = "hypembed-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for hypembed"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neuralforgeone/hypembed"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hypembed = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"