[package]
name = "hypembed-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for hypembed"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neuralforgeone/hypembed"
homepage = "https://neuralforgeone.github.io/hypembed/"
keywords = ["wasm", "embeddings", "webassembly"]
categories = ["wasm", "science"]
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hypembed = { version = "0.3.0", path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"